# SkyPro_Homework_Banking_app

./: .coverage  README.md  pyproject.toml
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
